Fix overflow issue on series page

--- a/src/css/includes/series.scss
+++ b/src/css/includes/series.scss
@@ -1,4 +1,5 @@
 #series-top-wrap {
+	overflow: hidden;
 	background-color: $black;
 }
 #series-top-bg {
